===v7.0.1===
 * Numbered units entered with a space in the middle (e.g. "arena 1") will once again be corrected by TellMeWhen. It is still bad practice to enter units like that, though.

====Bug Fixes====
 ** Fixed a typo that was preventing Loss of Control icons from reporting their spell.

===v7.0.0===

====Core Systems====
 * You can now create global groups that exist for all characters on your account. These groups can be enabled and disabled on a per-profile basis.
 * Text Layouts are now defined on an account-wide basis instead of being defined for individual profiles.

 * Many icon types, when set on the first icon in a group, are now able to control that entire group with the data that they harvest.

 * All references from one icon or group to another in TellMeWhen are now tracked by a unique ID. This ID will persist no matter where it is moved or exported to.
 ** This includes:
 *** DogTags
 *** Meta icons
 *** Icon Shown conditions (and the other conditions that track icons)
 *** Group anchoring to other groups
 ** The consequence of this is that you can now, for example, import/export a meta icon separately from the icons it is checking and they will automatically find eachother once they are all imported (as long as these export strings were created with TMW v7.0.0+)
 ** IMPORTANT: Existing DogTags that reference other icons/groups by ID cannot be updated automatically - you will need to change these yourself.

====Events/Notifications====
 * Events have been re-branded to Notifications, and you can now add notifications that will trigger continually while a set of conditions evaluate to true.
 * New Notification: Counter. Configure a counter that can be checked in conditions and displayed with DogTags.
 * The On Other Icon Show/Hide events have been removed. Their functionality can be obtained using an On Condition Set Passing trigger.
 * You can now adjust the target opacity of the Alpha Flash animation

====Icon Types====