@@ -2,7 +2,8 @@
  * Numbered units entered with a space in the middle (e.g. "arena 1") will once again be corrected by TellMeWhen. It is still bad practice to enter units like that, though.
 
 ====Bug Fixes====
- ** Fixed a typo that was preventing Loss of Control icons from reporting their spell.
+ * Fixed a typo that was preventing Loss of Control icons from reporting their spell.
+ * Fixed an error that would happen when upgrading a text layout that was previously unnamed: IconModule_Texts\Texts.lua:150 attempt to concatenate field 'Name' (a nil value)
 
 ===v7.0.0===
 
